--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,7 @@
 }
 html
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "El Messiri", 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:  "El Messiri", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
