--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -137,12 +137,15 @@
     bottom: 0;
     width: 100vw;
     height: 100vh;
-    
-    overflow-y: scroll;
+  
   }
-
+  .menu-item-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .menu-item-img img {
-    width: 80vw;
+    width: 50%;
     
     border-radius: 2000px;
 
@@ -210,9 +213,11 @@
   }
   .m1 .slide__outer {
     transform: translateX(0%);
+    z-index: 2;
   }
   .m1 .slide__inner {
     transform: translateX(0%);
+    z-index: 2;
   }
   .m2 {
     width: 100vw;
@@ -221,6 +226,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    
   }
   
   .m3 {
