--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,5 +1,6 @@
 .container {
     
+  position: fixed;
     height: 100vh; 
     width: 100vw;
     display: flex;
@@ -11,10 +12,10 @@
 .navbar {
     position: sticky;
     bottom: 0;
-    left: 0;
     width: 100vw;
 }
 .contant {
+    position: relative;
     width: 100vw;
     height: 100vh ;
     display: flex;
